--- a/src/about.html
+++ b/src/about.html
@@ -19,20 +19,94 @@
 <body>
   <!-- header -->
   <nav>
-      @@include('layout/nav.html')
+    @@include('layout/nav.html')
   </nav>
+
   <head>
-      @@include('layout/login.html')
+    @@include('layout/login.html')
   </head>
   <!-- content，各自頁面的html寫在這邊以下都是範例 大區塊外面包section  -->
   <main>
-    <section>
-   <h1>大標</h1>
-   <h2>小標</h2>
+    <section class="banner">
+        <img src="img/about/about_banner.png">
+        <div class="slogan">
+        <h2>------------------    2022  最新科技展  --------------------</h2>
+        <h1>新智慧、新科技、新創意</h1>
+        <h2>2022.04.01 - 2022.06.30</h2>
+        </div>
     </section>
-    <section>
+    <section class="wrapper">
+      <h1>會議簡介</h1>
+      <h3>疫情翻轉新常態．加速智慧轉型~~~~<br>
+        新冠肺炎疫情自2020年爆發以來，徹底翻轉人類生活、工作與娛樂型態。遠距、零接觸成為「新常態」，促使國家、企業乃至個人，都要展開「智慧轉型」，以迎向後疫情時代，並緊緊握住復甦商機。在疫情期間展現優異的經濟韌性。疫情過後，全球更應該積極推動經濟轉型，邁入新形態市場，要強化數位轉型，更要提升民眾數位化能力。
+      </h3>
+    </section>
+    <section class="agenda">
+      <img src="img/about/about_middleIMG.png">
+      <div class="schedule">
+        <h1>大會議程</h1>
+        <h3>
+          <ul>
+            <li>
+              <h3 class="time">10:20-10:30</h3>
+              <h3 class="theme">主持人介紹</h3>
+            </li>
+             <li>
+              <h3 class="time">10:30-11:00</h3>
+              <h3 class="theme">主講人:唐鳳-數位國家・創新經濟發展方案</h3>
+            </li>
+            <li>
+              <h3 class="time">11:00-11:30</h3>
+              <h3 class="theme">主講人:郭水義-看好5G 前景</h3>
+            </li>
+            <li>
+              <h3 class="time">11:30-12:00</h3>
+              <h3 class="theme">主講人:張忠謀-經營人的學習與成長</h3>
+            </li>
+            <li>
+              <h3 class="time">12:00-13:00</h3>
+              <h3 class="theme">中午休息</h3>
+            </li>
+            <li>
+              <h3 class="time">13:00-14:00</h3>
+              <h3 class="theme">廠商名-技術分享</h3>
+            </li>
+            <li>
+              <h3 class="time">14:00-15:00</h3>
+              <h3 class="theme">廠商名-技術分享</h3>
+            </li>
+            <li>
+              <h3 class="time">15:00-16:00</h3>
+              <h3 class="theme">廠商名-技術分享</h3>
+            </li>
+          </ul>
+        </h3>
+      </div>
+    </section>
+    <section class="wrapper">
+      <h1>講師介紹</h1>
+      <div class="speakers">
+        <div class="speaker">
+          <img src="#">
+          <h3>郭水義</h3>
+          <h4>中華電信總經理</h4>
+        </div>
+        <div class="speaker">
+          <img src="#">
+          <h3>張忠謀</h3>
+          <h4>台積電創辦人</h4>
+        </div>
+        <div class="speaker">
+          <img src="#">
+          <h3>唐鳳</h3>
+          <h4>現職:行政院政務委員</h4>
+        </div>
+      </div>
+    
+    </section>
 
-    </section>
+
+    
   </main>
   <!-- footer -->
   <footer>
