--- a/src/about.html
+++ b/src/about.html
@@ -87,22 +87,50 @@
       <h1>講師介紹</h1>
       <div class="speakers">
         <div class="speaker">
-          <img src="#">
+          <img src="img/about/speaker1.png">
           <h3>郭水義</h3>
           <h4>中華電信總經理</h4>
+          <div class="hoverText"><h4>郭水義
+            經歷
+            -中華電信執行副總經理暨財務長
+            -中華電信執行副總經理（投資長）
+            -中華電信投資事業處副總經理
+            -光世代建設開發股份有限公司總經理
+            -中華電信會計處副總經理</h4>
+          </div>
         </div>
         <div class="speaker">
-          <img src="#">
+          <img src="img/about/speaker2.png">
           <h3>張忠謀</h3>
           <h4>台積電創辦人</h4>
+          <div class="hoverText"><h4>張忠謀
+            經歷
+            -應邀至台灣擔任工業技術研究院院長
+            -創辦台灣積體電路公司，任董事長
+            -創辦世界先進積體電路公司司
+            -曾被「時代」週刊評為最有影響力的二十六位總經理之一。
+            </h4>
+          </div>
         </div>
         <div class="speaker">
-          <img src="#">
+          <img src="img/about/speaker3.png">
           <h3>唐鳳</h3>
           <h4>現職:行政院政務委員</h4>
+          <div class="hoverText"><h4>唐鳳
+            經歷
+            -行政院虛擬世界法規調適計劃顧問
+            -Perl 6語言設計師和首席實作者
+            -耀宏科技顧問
+            -傲爾網公司負責人
+            -明碁公司顧問
+            -資迅人公司技術總監。
+            </h4>
+          </div>
         </div>
       </div>
-    
+    </section>
+    <section>
+      <h1>參與廠商</h1>
     </section>
 
 
