feat:about 照片,css 修改banner, 講師介紹大致完成

--- a/src/about.html
+++ b/src/about.html
@@ -28,12 +28,12 @@
   <!-- content，各自頁面的html寫在這邊以下都是範例 大區塊外面包section  -->
   <main>
     <section class="banner">
-        <img src="img/about/about_banner.png">
-        <div class="slogan">
-        <h2>------------------    2022  最新科技展  --------------------</h2>
+      <img src="img/about/about_banner.png">
+      <div class="slogan">
+        <h2>---------- 2022 最新科技展 ----------</h2>
         <h1>新智慧、新科技、新創意</h1>
         <h2>2022.04.01 - 2022.06.30</h2>
-        </div>
+      </div>
     </section>
     <section class="wrapper">
       <h1>會議簡介</h1>
@@ -42,7 +42,7 @@
       </h3>
     </section>
     <section class="agenda">
-      <img src="img/about/about_middleIMG.png">
+      <img src="img/about/abou_middleimg.png">
       <div class="schedule">
         <h1>大會議程</h1>
         <h3>
@@ -51,7 +51,7 @@
               <h3 class="time">10:20-10:30</h3>
               <h3 class="theme">主持人介紹</h3>
             </li>
-             <li>
+            <li>
               <h3 class="time">10:30-11:00</h3>
               <h3 class="theme">主講人:唐鳳-數位國家・創新經濟發展方案</h3>
             </li>
@@ -87,43 +87,50 @@
       <h1>講師介紹</h1>
       <div class="speakers">
         <div class="speaker">
-          <img src="img/about/speaker1.png">
-          <h3>郭水義</h3>
-          <h4>中華電信總經理</h4>
-          <div class="hoverText"><h4>郭水義
-            經歷
-            -中華電信執行副總經理暨財務長
-            -中華電信執行副總經理（投資長）
-            -中華電信投資事業處副總經理
-            -光世代建設開發股份有限公司總經理
-            -中華電信會計處副總經理</h4>
-          </div>
-        </div>
-        <div class="speaker">
-          <img src="img/about/speaker2.png">
-          <h3>張忠謀</h3>
-          <h4>台積電創辦人</h4>
-          <div class="hoverText"><h4>張忠謀
-            經歷
-            -應邀至台灣擔任工業技術研究院院長
-            -創辦台灣積體電路公司，任董事長
-            -創辦世界先進積體電路公司司
-            -曾被「時代」週刊評為最有影響力的二十六位總經理之一。
+          <img class="mt-35" src="img/about/speaker1.png">
+          <h3 class="mt-18">郭水義</h3>
+          <h4 class="mt-8">中華電信總經理</h4>
+          <div class="hoverText ">
+            <h4>郭水義<br>經歷
+              <ul>
+                <li>-中華電信執行副總經理暨財務長</li>
+                <li>-中華電信執行副總經理（投資長）</li>
+                <li>-中華電信投資事業處副總經理</li>
+                <li>-光世代建設開發股份有限公司總經理</li>
+                <li>-中華電信會計處副總經理</li>
+              </ul>
             </h4>
           </div>
         </div>
         <div class="speaker">
-          <img src="img/about/speaker3.png">
-          <h3>唐鳳</h3>
-          <h4>現職:行政院政務委員</h4>
-          <div class="hoverText"><h4>唐鳳
-            經歷
-            -行政院虛擬世界法規調適計劃顧問
-            -Perl 6語言設計師和首席實作者
-            -耀宏科技顧問
-            -傲爾網公司負責人
-            -明碁公司顧問
-            -資迅人公司技術總監。
+          <img class="mt-35" src="img/about/speaker2.png">
+          <h3 class="mt-18">張忠謀</h3>
+          <h4 class="mt-8">台積電創辦人</h4>
+          <div class="hoverText">
+            <h4>張忠謀<br>經歷
+              <ul>
+                <li>-應邀至台灣擔任工業技術研究院院長</li>
+                <li>-創辦台灣積體電路公司，任董事長</li>
+                <li>-創辦世界先進積體電路公司司</li>
+                <li>-曾被「時代」週刊評為最有影響力的二十六位總經理之一</li>
+              </ul>
+            </h4>
+          </div>
+        </div>
+        <div class="speaker">
+          <img class="mt-35" src="img/about/speaker3.png">
+          <h3 class="mt-18">唐鳳</h3>
+          <h4 class="mt-8">現職:行政院政務委員</h4>
+          <div class="hoverText">
+            <h4>唐鳳<br>經歷
+              <ul>
+                <li>-行政院虛擬世界法規調適計劃顧問</li>
+                <li>-Perl 6語言設計師和首席實作者</li>
+                <li>-耀宏科技顧問</li>
+                <li>-傲爾網公司負責人</li>
+                <li>-明碁公司顧問</li>
+                <li>-資迅人公司技術總監</li>
+              </ul>
             </h4>
           </div>
         </div>
@@ -134,7 +141,7 @@
     </section>
 
 
-    
+
   </main>
   <!-- footer -->
   <footer>
