feat: 新增parallax.js套件, index-background-img, 01.jpg

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
     integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous" />
   <!-- title icon -->
   <link rel="icon" href="img/tianlam-logo-mainblack.svg">
+  <!-- parallax.js -->
+  <link rel="stylesheet" href="">
 
   <title>聚策展-範例頁</title>
 </head>
@@ -30,13 +32,14 @@
       <div><img src="http://fakeimg.pl/2000x1000/" alt="fake" class="img"/></div>
     </section> -->
 
+    <section>
+      <div class="wrapper">
+        
 
-        <section>
+      </div>
+    </section>
 
-            <div class="mt-10"></div>
 
-
-        </section>
 
         
    
@@ -47,6 +50,7 @@
   </footer>
 
   <!-- 先連結main再連結各自設的js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
   <script src="js/main.min.js"></script>
   <script src="js/login.min.js"></script>
   <script src="js/index.min.js"></script>
