fix:修改index.scss中的標籤，更改為class name與新增html中main的class

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
       @@include('layout/login.html')
   </head>
   <!-- content，各自頁面的html寫在這邊以下都是範例 -->
-  <main>
+  <main class="index_block">
     <!-- <section> -----------------example----------------------------
       <div><img src="http://fakeimg.pl/2000x1000/" alt="fake" class="img"/></div>
     </section> -->
