feat 新增about 輪播圖

--- a/src/about.html
+++ b/src/about.html
@@ -12,6 +12,7 @@
     integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous" />
   <!-- title icon -->
   <link rel="icon" href="img/tianlam-logo-mainblack.svg">
+  <!-- slider (swiper) -->
   <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
   
 
@@ -141,7 +142,19 @@
     </section>
     <section>
       <h1>參與廠商</h1>
-     
+      <!-- Swiper -->
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+          <div class="swiper-slide"><img src="/img/sample/Logo1.png"></div>
+          <div class="swiper-slide"><img src="/img/sample/Logo2.png"></div>
+          <div class="swiper-slide"><img src="/img/sample/Logo3.png"></div>
+          <div class="swiper-slide"><img src="/img/sample/Logo4.png"></div>
+          <div class="swiper-slide"><img src="/img/sample/Logo5.png"></div>
+          <div class="swiper-slide"><img src="/img/sample/Logo6.png"></div>
+          <div class="swiper-slide"><img src="/img/sample/Logo7.png"></div>
+      </div>
+      <div class="swiper-scrollbar"></div>
+  </div>
     </section>
 
 
@@ -157,8 +170,12 @@
   <script src="js/main.min.js"></script>
   <script src="js/login.min.js"></script>
   <script src="js/index.min.js"></script>
-  <script src="js/about.js"></script>
+  <script src="js/about.min.js"></script>
   
+ 
+ 
+
+
 </body>
 
 </html>
