feat 增加 about頁面大標 mb-10 , 修改輪播scrollbar 寬度

--- a/src/about.html
+++ b/src/about.html
@@ -40,7 +40,7 @@
       </div>
     </section>
     <section class="wrapper">
-      <h1>會議簡介</h1>
+      <h1 class="mb-10">會議簡介</h1>
       <h3>疫情翻轉新常態．加速智慧轉型~~~~<br>
         新冠肺炎疫情自2020年爆發以來，徹底翻轉人類生活、工作與娛樂型態。遠距、零接觸成為「新常態」，促使國家、企業乃至個人，都要展開「智慧轉型」，以迎向後疫情時代，並緊緊握住復甦商機。在疫情期間展現優異的經濟韌性。疫情過後，全球更應該積極推動經濟轉型，邁入新形態市場，要強化數位轉型，更要提升民眾數位化能力。
       </h3>
@@ -49,7 +49,7 @@
       <!-- <img src="img/about/abou_middleimg.png"> -->
       <div class="about_schedule ">
         <div class="about_scheduleText">
-          <h1>大會議程</h1>
+          <h1 class="mb-10">大會議程</h1>
           <ul>
             <li>
               <h3 class="about_time">10:20-10:30</h3>
@@ -88,7 +88,7 @@
       </div>
     </section>
     <section class="wrapper">
-      <h1>講師介紹</h1>
+      <h1 class="mb-10">講師介紹</h1>
       <div class="about_speakers">
         <div class="about_speaker">
           <img class="mt-35" src="img/about/speaker1.png">
@@ -111,9 +111,9 @@
           <h3 class="mt-18">張忠謀</h3>
           <h4 class="mt-8">台積電創辦人</h4>
           <div class="about_hoverText">
-            <h4>張忠謀<br>經歷
+            <h4 >張忠謀<br>經歷
               <ul>
-                <li>-應邀至台灣擔任工業技術研究院院長</li>
+                <li>-應邀至擔任工業技術研究院院長</li>
                 <li>-創辦台灣積體電路公司，任董事長</li>
                 <li>-創辦世界先進積體電路公司司</li>
                 <li>-曾被「時代」週刊評為最有影響力的二十六位總經理之一</li>
@@ -141,7 +141,7 @@
       </div>
     </section>
     <section>
-      <h1>參與廠商</h1>
+      <h1 class="mb-10">參與廠商</h1>
       <!-- Swiper -->
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
