feat:新增live直播頁面的html和js，尚未新增內容

--- a/src/live.html
+++ b/src/live.html
@@ -28,7 +28,17 @@
     <!-- content，各自頁面的html寫在這邊以下都是範例 -->
     <main>
         <section>
-
+            <div class="vd_container">
+                 <iframe width="900" height="500" src="https://www.youtube.com/embed/gfwWsWJhoig?modestbranding=1&autoplay=1&playlist=gfwWsWJhoig" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+                <iframe allowfullscreen="" frameborder="0" height="500"
+                    src="https://www.youtube.com/live_chat?is_popout=1&v=gfwWsWJhoig&embed_domain=127.0.0.1"
+                    width="300">
+                </iframe>
+            </div>
         </section>
     </main>
     <!-- footer -->
@@ -40,6 +50,7 @@
     <script src="js/main.min.js"></script>
     <script src="js/login.min.js"></script>
     <script src="js/index.min.js"></script>
+    <script src="js/live.min.js"></script>
     <script>
 
     </script>
