--- a/src/extend.html
+++ b/src/extend.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
   <!-- OwlCarousel2.3.4 -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
   <!-- css -->
   <link rel="stylesheet" href="css/style.css" />
   <!-- font awesome -->
@@ -22,39 +23,37 @@
 <body>
   <!-- header -->
   <nav>
-      @@include('layout/nav.html')
+    @@include('layout/nav.html')
   </nav>
+
   <head>
-      <!-- @@include('layout/login.html') -->
+    <!-- @@include('layout/login.html') -->
   </head>
   <!-- content，各自頁面的html寫在這邊以下都是範例 -->
   <main>
     <section class="wrapper">
       <article class="extend_head -margin0auto">
         <div class="owl-carousel owl-theme">
-          <div class="item"><img src="img/sample/tsmc_logo.png" alt=""></div>
-          <div class="item"><img src="img/sample/tsmc_logo.png" alt=""></div>
-          <div class="item"><img src="img/sample/tsmc_logo.png" alt=""></div>
-          <div class="item"><img src="img/sample/tsmc_logo.png" alt=""></div>
-          <div class="item"><img src="img/sample/tsmc_logo.png" alt=""></div>
-          <div class="item"><img src="img/sample/tsmc_logo.png" alt=""></div>
-          <div class="item"><img src="img/sample/tsmc_logo.png" alt=""></div>
-          <div class="item"><img src="img/sample/tsmc_logo.png" alt=""></div>
-          <div class="item"><img src="img/sample/tsmc_logo.png" alt=""></div>
-          <div class="item"><img src="img/sample/tsmc_logo.png" alt=""></div>
-          <div class="item"><img src="img/sample/tsmc_logo.png" alt=""></div>
-          <div class="item"><img src="img/sample/tsmc_logo.png" alt=""></div>
+          <div class="item"><img class="-margin0auto" src="img/sample/Logo1.png" alt=""></div>
+          <div class="item"><img class="-margin0auto" src="img/sample/Logo2.png" alt=""></div>
+          <div class="item"><img class="-margin0auto" src="img/sample/logo3.png" alt=""></div>
+          <div class="item"><img class="-margin0auto" src="img/sample/Logo4.png" alt=""></div>
+          <div class="item"><img class="-margin0auto" src="img/sample/Logo5.png" alt=""></div>
+          <div class="item"><img class="-margin0auto" src="img/sample/logo6.png" alt=""></div>
+          <div class="item"><img class="-margin0auto" src="img/sample/Logo7.png" alt=""></div>
+          <div class="item"><img class="-margin0auto" src="img/sample/logo8.png" alt=""></div>
+          <div class="item"><img class="-margin0auto" src="img/sample/logo9.png" alt=""></div>
+          <div class="item"><img class="-margin0auto" src="img/sample/logo10.png" alt=""></div>
+          <!-- <div class="item"><img class="-margin0auto" src="img/extend/robotwave2.gif" alt=""></div>
+          <div class="item"><img class="-margin0auto" src="img/about/about_banner.png" alt=""></div> -->
         </div>
       </article>
     </section>
-
-    <section >
-      <article></article>
-    </section>
-    <section class=" wrapper">
+    <section class="wrapper">
 
     </section>
 
+    <section>
     <section class="wrapper">
       <div class="emample_box flex-box-column mb-15">
         <h1 class="second-color">nav的include乖乖</h1>
@@ -113,7 +112,7 @@
           <div class="btn"><a href="">登入</a></div>
         </div>
       </div>
-      
+
     </section>
   </main>
   <!-- footer -->
