feat 更改slogan h1 顏色 新增其他h1標籤顏色

--- a/src/about.html
+++ b/src/about.html
@@ -30,7 +30,7 @@
     @@include('layout/login.html')
   </head>
   <!-- content，各自頁面的html寫在這邊以下都是範例 大區塊外面包section  -->
-  <main>
+  <main class>
     <section class="about_banner">
       <img src="img/about/about_banner.png">
       <div class="about_slogan">
@@ -39,15 +39,15 @@
         <h2>2022.04.01 - 2022.06.30</h2>
       </div>
     </section>
-    <section class="wrapper">
+    <section class="wrapper about_brief ">
       <h1 class="mb-10">會議簡介</h1>
       <h3>疫情翻轉新常態．加速智慧轉型~~~~<br>
         新冠肺炎疫情自2020年爆發以來，徹底翻轉人類生活、工作與娛樂型態。遠距、零接觸成為「新常態」，促使國家、企業乃至個人，都要展開「智慧轉型」，以迎向後疫情時代，並緊緊握住復甦商機。在疫情期間展現優異的經濟韌性。疫情過後，全球更應該積極推動經濟轉型，邁入新形態市場，要強化數位轉型，更要提升民眾數位化能力。
       </h3>
     </section>
-    <section class="about_agenda wrapper">
+    <section class="about_agenda ">
       <!-- <img src="img/about/abou_middleimg.png"> -->
-      <div class="about_schedule ">
+      <div class="about_schedule wrapper">
         <div class="about_scheduleText">
           <h1 class="mb-10">大會議程</h1>
           <ul>
@@ -87,7 +87,7 @@
         </div>
       </div>
     </section>
-    <section class="wrapper">
+    <section class="wrapper about_lecturer">
       <h1 class="mb-10">講師介紹</h1>
       <div class="about_speakers">
         <div class="about_speaker">
@@ -100,8 +100,8 @@
                 <li>-中華電信執行副總經理暨財務長</li>
                 <li>-中華電信執行副總經理（投資長）</li>
                 <li>-中華電信投資事業處副總經理</li>
-                <li>-光世代建設開發股份有限公司總經理</li>
                 <li>-中華電信會計處副總經理</li>
+                <li>-光世代建設開發股份有限公司總經理</li>
               </ul>
             </h4>
           </div>
@@ -140,8 +140,8 @@
         </div>
       </div>
     </section>
-    <section>
-      <h1 class="mb-10">參與廠商</h1>
+    <section class="about_exhibitor">
+      <h1 class="mb-10 wrapper">參與廠商</h1>
       <!-- Swiper -->
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
