feat 更新companyback_live.js 增加_other.scss 更新_c_back_live.scss外加html(live)共四分

--- a/src/companyback_live.html
+++ b/src/companyback_live.html
@@ -56,8 +56,7 @@
 
             <form action="#" class="companyback_form ">
                 <!-- icon -->
-                <aside class="companyback_layout blue" style="color: rgba(87, 255, 245, 0.14);
-                ">2</aside>
+                <aside class="companyback_layout blue" >2</aside>
                 <ol class="companyback_icon">
                     <li><a><i class="fa-regular fa-pen-to-square"></i></a></li>
                     <li> <a><i class="fa-regular fa-trash-can"></i></a></li>
@@ -76,8 +75,7 @@
             </form>
             <form action="#" class="companyback_form ">
                 <!-- icon -->
-                <aside class="companyback_layout" style="color:rgba(243, 127, 21, 0.14)
-                ">3</aside>
+                <aside class="companyback_layout orange">3</aside>
                 <ol class="companyback_icon">
                     <li><a><i class="fa-regular fa-pen-to-square"></i></a></li>
                     <li class="trash-can"> <a><i class="fa-regular fa-trash-can"></i></a></li>
