--- a/src/about.html
+++ b/src/about.html
@@ -30,7 +30,7 @@
     @@include('layout/login.html')
   </head>
   <!-- content，各自頁面的html寫在這邊以下都是範例 大區塊外面包section  -->
-  <main class>
+  <main >
     <section class="about_banner">
       <img src="img/about/about_banner.png">
       <div class="about_slogan">
@@ -40,7 +40,7 @@
       </div>
     </section>
     <section class="wrapper about_brief ">
-      <h1 class="mb-10">會議簡介</h1>
+      <div class="mb-10 about_title">會議簡介</div>
       <h3>疫情翻轉新常態．加速智慧轉型~~~~<br>
         新冠肺炎疫情自2020年爆發以來，徹底翻轉人類生活、工作與娛樂型態。遠距、零接觸成為「新常態」，促使國家、企業乃至個人，都要展開「智慧轉型」，以迎向後疫情時代，並緊緊握住復甦商機。在疫情期間展現優異的經濟韌性。疫情過後，全球更應該積極推動經濟轉型，邁入新形態市場，要強化數位轉型，更要提升民眾數位化能力。
       </h3>
@@ -49,7 +49,7 @@
       <!-- <img src="img/about/abou_middleimg.png"> -->
       <div class="about_schedule wrapper">
         <div class="about_scheduleText">
-          <h1 class="mb-10">大會議程</h1>
+          <div class="mb-10 about_title">大會議程</div>
           <ul>
             <li>
               <h3 class="about_time">10:20-10:30</h3>
@@ -88,7 +88,7 @@
       </div>
     </section>
     <section class="wrapper about_lecturer">
-      <h1 class="mb-10">講師介紹</h1>
+      <div class="mb-10 about_title">講師介紹</div>
       <div class="about_speakers">
         <div class="about_speaker">
           <img class="mt-35" src="img/about/speaker1.png">
@@ -141,7 +141,7 @@
       </div>
     </section>
     <section class="about_exhibitor">
-      <h1 class="mb-10 wrapper">參與廠商</h1>
+      <div class="mb-10 wrapper about_title">參與廠商</div>
       <!-- Swiper -->
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
