feat: title spotlight

--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,11 @@
   </head>
   <!-- content，各自頁面的html寫在這邊以下都是範例 -->
   <main class="wrapper index_block main-color ">
-      <h1 class="index_title mt-60">Tián lám 2022 智慧全球科技聚策展</h1>
+      <div class="index_title mt-60">
+        <h1 class="" data-spotlight="Tián lám 2022 智慧全球科技聚策展！">Tián lám 2022 智慧全球科技聚策展</h1>
+      </div>
       <section class="index_carousel">
-        <div class="index_carousel_single ">
+        <!-- <div class="index_carousel_single ">
           <h1>現正直播</h1>
           <h2>Live</h2>
         </div>
@@ -41,7 +43,7 @@
         <div class="index_carousel_single ">
           <h1>展會介紹</h1>
           <h2>About</h2>
-        </div>
+        </div> -->
       </section>
       
 
