feat 更改about 和contect 頁面title

--- a/src/contect.html
+++ b/src/contect.html
@@ -13,7 +13,7 @@
     <!-- title icon -->
     <link rel="icon" href="img/tianlam-logo-mainblack.svg">
 
-    <title>聚策展-範例頁</title>
+    <title>Contect</title>
 </head>
 
 <body>
@@ -34,15 +34,15 @@
             </div>
         </section>
         <section class="wrapper">
-            <!-- <div class="row">
-                <div class="col-6">
+            <div class="row">
+                <div class="about_card_1 col-12 col-sm-6">
                     <H2>你</H2>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-sm-6">
                     <H2>你</H2>
                 </div>
 
-            </div> -->
+            </div>
             
 
         </section>
