--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,8 @@
   <link rel="icon" href="img/tianlam-logo-mainblack.svg">
   <!-- parallax.js -->
   <link rel="stylesheet" href="">
-
+  <!-- jQeury -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" referrerpolicy="no-referrer"></script>
   <title>聚策展-範例頁</title>
 </head>
 
@@ -27,7 +28,7 @@
       @@include('layout/login.html')
   </head>
   <!-- content，各自頁面的html寫在這邊以下都是範例 -->
-  <main class="wrapper index_block main-color ">
+  <!-- <main class="wrapper index_block main-color ">
       <h1 class="index_title mt-60">Tián lám 2022 智慧全球科技聚策展</h1>
       <section class="index_carousel">
         <div class="index_carousel_single ">
@@ -42,14 +43,14 @@
           <h1>展會介紹</h1>
           <h2>About</h2>
         </div>
-      </section>
+      </section> -->
       
 
     
     <!-- <section> -----------------example----------------------------
       <div><img src="http://fakeimg.pl/2000x1000/" alt="fake" class="img"/></div>
     </section> -->
-  </main>  
+  <!-- </main>   -->
   <!-- footer -->
   <footer>
     @@include('layout/footer.html')
