fix: 修正首頁跑版問題

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
     <!-- <section> -----------------example----------------------------
       <div><img src="http://fakeimg.pl/2000x1000/" alt="fake" class="img"/></div>
     </section> -->
-  <!-- </main>   -->
+  </main>  
   <!-- footer -->
   <footer>
     @@include('layout/footer.html')
